--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
   <head>
     <title>React Comx</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="/static/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div id='root'>
     </div>
-    <script src="/static/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
