dom: changed mount id

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/static/style.css" />
   </head>
   <body>
-    <div id='root'>
+    <div id='CountdownRoot'>
     </div>
     <script src="/static/bundle.js"></script>
   </body>
